# hypha

./: .gitignore  Cargo.toml  flake.nix  readme.md
.cargo/: config.toml
.github/workflows/: client_ci.yml  rust_ci.yml  server_ci.yml
api/: Cargo.toml
api/src/: lib.rs  unit.rs
client/: Cargo.toml  default.nix  sdkconfig.defaults
client/src/: blink.rs  http.rs  main.rs  wifi.rs
server/: Cargo.toml  default.nix  module.nix
server/src/: main.rs  systemd.rs
